test/types/type_variables/bharshbarg/thisOnTypeVar.good
thisOnTypeVar.chpl:3: error: illegal call of type
