test/types/type_variables/bharshbarg/thisOnTypeVar.chpl

type x = real;
x.this();
